# dagrun

./: .pre-commit-config.yaml  Cargo.toml  README.md  dagfile  justfile  project.dr
.github/workflows/: ci.yml  release.yml
claude-plugin/.claude-plugin/: marketplace.json
claude-plugin/plugins/dagrun-lsp/: README.md  plugin.json
crates/dagrun-ast/: Cargo.toml
crates/dagrun-ast/src/: ast.rs  docs.rs  error.rs  lexer.rs  lib.rs  parser.rs  semantic.rs  semantic_parser.rs  span.rs
crates/dagrun-lsp/: Cargo.toml  test.dr
crates/dagrun-lsp/src/: lib.rs  main.rs
crates/dr-ast/: Cargo.toml
crates/dr-ast/src/: ast.rs  lexer.rs  lib.rs  parser.rs  semantic.rs  semantic_parser.rs
crates/dr-lsp/: Cargo.toml  README.md
crates/dr-lsp/src/: lib.rs  main.rs
examples/: basic.dr  complex-hybrid.dr  k8s.dagrun  k8s.dr  ssh-service-remote.dagrun  ssh-service-remote.dr  ssh-service.dagrun  ssh-service.dr  ssh.dagrun  ssh.dr
src/: config.rs  dag.rs  env.rs  executor.rs  history.rs  justfile.rs  k8s.rs  lua.rs  main.rs  progress.rs  service.rs  ssh.rs
src/recorder/: mod.rs  sqlite.rs  types.rs
src/tui/: mod.rs
src/tui/views/: mod.rs
tests/: basic.rs  integration.rs  k8s.rs  lua_integration.rs  piped_data.rs  services.rs
tree-sitter-dagrun/: .gitignore  README.md  grammar.js  nvim-integration.lua  package.json  tree-sitter.json
tree-sitter-dagrun/queries/: highlights.scm  injections.scm  locals.scm
tree-sitter-dagrun/queries/dagrun/: folds.scm  highlights.scm  locals.scm  textobjects.scm
tree-sitter-dagrun/src/: scanner.c
tree-sitter-dagrun/test/corpus/: blocks.txt
tree-sitter-dr/: nvim-integration.lua  package-lock.json  tasks.dagrun
tree-sitter-dr/queries/: folds.scm  textobjects.scm
tree-sitter-dr/queries/dagrun/: injections.scm
tree-sitter-dr/test/corpus/: basics.txt
