[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"

[package]
name = "dagrun"
version.workspace = true
edition.workspace = true

[dependencies]
dagrun-ast = { path = "crates/dagrun-ast" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
humantime = "2"
colored = "2"
anyhow = "1"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
glob = "0.3"
url = "2"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
openssh = "0.11"
openssh-sftp-client = { version = "0.15", features = ["openssh"] }
bytes = "1"
dirs = "5"
nix = { version = "0.29", features = ["signal"] }
shell-escape = "0.1"
fastrand = "2"
kube = { version = "3", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27", features = ["latest"] }
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[[test]]
name = "integration"
path = "tests/integration.rs"
