[package]
name = "dr-lsp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dr-lsp"
path = "src/main.rs"

[dependencies]
dr-ast = { path = "../dr-ast" }
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shellexpand = "3"
which = "7"
